# cgo25_transform_artifact

./: .gitmodules  Dockerfile  Makefile  README.md
lib/Performance_Exploration/: CMakeLists.txt  batch_matmul.c  batch_matmul.mlir  parametric_transform.mlir  run_with_timeout.py  search_batch_matmul.c  search_settings.json
patches/: dump_transform_script_from_mlir.patch  timing_mlir_opt.patch  timing_transforms.patch
scripts/: bench_compile_time.py  get_models.py  performance_exploration.py  plot_performance_evolution.sh  run_all.sh  show_spinner.sh
